org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/Constraint/003_ConstraintTest.kmt
/* $Id:$ 
 * Creation : December 29, 2010
 * Licence  : EPL 
 * Copyright:
 * Authors  : 
 *            dvojtise
 */


package test {
	class Main
	{
		
		operation main() : Void 
		post testPostcond is do
			result:=false
		end
		
		is do 
			//StdIO.writeln("Hello world")
		end
		
		
		
	}
	

}

